--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,6 +2,7 @@ ARG PYTORCH="1.9.0"
 ARG CUDA="11.1"
 ARG CUDNN="8"
 FROM pytorch/pytorch:${PYTORCH}-cuda${CUDA}-cudnn${CUDNN}-devel
+# FROM leshabard/cuda11.7-python3.10
 
 RUN rm /etc/apt/sources.list.d/cuda.list \
   && rm /etc/apt/sources.list.d/nvidia-ml.list \
