--- a/EVA-CLIP/rei/training/deepspeed_config.json
+++ b/EVA-CLIP/rei/training/deepspeed_config.json
@@ -1,7 +1,7 @@
 {
-  "train_batch_size": 4096,
-  "train_micro_batch_size_per_gpu": 256,
-  "gradient_accumulation_steps": 2,
+  "train_batch_size": 50176,
+  "train_micro_batch_size_per_gpu": 784,
+  "gradient_accumulation_steps": 4,
   "steps_per_print": 1000,
   "zero_allow_untested_optimizer": true,
   "fp16": {
@@ -30,6 +30,20 @@
     "partition_activations": true,
     "contiguous_memory_optimization": false,
     "profile": true
+  },
+  "optimizer": {
+    "type": "LAMB",
+    "params": {
+      "bias_correction": true,
+      "betas": [
+        0.9,
+        0.999
+      ],
+      "eps": 1e-08,
+      "max_coeff": 10.0,
+      "min_coeff": 0.01,
+      "eps_inside_sqrt": false
+    }
   },
   "gradient_clipping": 5.0,
   "zero_optimization": {
